feat(T2): add /avatar/slots API and dynamic motion dropdown
- Add get_available_slots() function to read slots from manifest.json
- Add GET /avatar/slots endpoint with fallback for missing manifest
- Update viewer.js to populate motion-select dynamically via API
- Remove hardcoded Kanata-specific VMD options from index.html
- Auto-update dropdown when character is loaded

--- a/viewer/index.html
+++ b/viewer/index.html
@@ -33,13 +33,10 @@
       <button id="char-load">Load</button>
     </div>
     <div id="motion-controls" class="diag-group">
-      <span class="label">Idle:</span>
+      <span class="label">Motion:</span>
       <select id="motion-select">
-        <option value="ten_stand.vmd">Ten</option>
-        <option value="koa_stand.vmd">Koa</option>
-        <option value="marieru_stand.vmd">Marieru</option>
-        <option value="rea_stand.vmd">Rea</option>
-        <option value="usa_stand.vmd">Usa</option>
+        <!-- T2: Options will be populated dynamically from /avatar/slots -->
+        <option value="">(loading...)</option>
       </select>
       <button id="motion-apply">Apply</button>
     </div>
